# radiopaths

./: .gitignore  README.md  environment.yaml  pyproject.toml  test.py  train.py
datasets/: mimic_cxr.py  preprocessing.py
jupyter/: generate_dataset.ipynb
models/: attention.py  block.py  clino.py  configs.py  embed.py  encoder.py  mlp.py  modeling_irene.py  prep.py
models2/: base_module.py  multimodal.py  transformer_encoder.py  unimodal.py
src/: train.py
src/datasets/: mimic_cxr.py  preprocessing.py
src/models/: multimodal.py  unimodal.py
src/util/: logging.py  util.py  vision.py
util/: _curriculum_clustering.py  logging.py  vision.py
