[tool.poetry]
name = "radiopaths"
version = "0.1.0"
description = "A Hybrid Multimodal Classifier for Chest Radiographs"
authors = ["Mohammad Kohankhaki <mohammad.kohankhaki@rwth-aachen.de>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
#torch = { url = "https://download.pytorch.org/whl/cu111/torch-1.10.0%2Bcu111-cp37-cp37m-linux_x86_64.whl" }
#torchvision = { url = "https://download.pytorch.org/whl/cu111/torchvision-0.11.0%2Bcu111-cp37-cp37m-linux_x86_64.whl" }
python-dotenv = "^0.19.2"
matplotlib = "^3.5.1"
numpy = "^1.21.4"
pandas = "^1.3.5"
seaborn = "^0.11.2"
regex = "^2021.11.10"
tqdm = "^4.62.3"
sklearn = "^0.0"
pandas-gbq = "^0.16.0"
pyarrow = "^6.0.1"
pydicom = "^2.2.2"
opencv-python = "^4.5.4"
grad-cam = "^1.3.7"
toml = "^0.10.2"
transformers = "^4.16.2"
ipykernel = "^6.9.1"
torch = "^1.11.0"
torchvision = "^0.12.0"
pytorch-lightning = "^1.5.10"
wandb = "^0.12.10"
ipywidgets = "^7.6.5"
torchmetrics = "^0.7.2"
Pillow-SIMD = "^9.0.0"
captum = "^0.5.0"
einops = "^0.4.1"
self-attention-cv = "^1.2.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
autoflake = "^1.4"
isort = "^5.10.1"
pre-commit = "^2.16.0"
mkdocs-material = "^8.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
